--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -1,5 +1,20 @@
 #!/bin/sh -eux
 
+# This file is part of MicroCeph - Ceph for a one-rack cluster and appliances.
+# Copyright 2021 Canonical Ltd.
+# 
+# MicroCeph is free software: you can redistribute it and/or modify it under
+# the terms of the GNU General Public License version 3, as published by the
+# Free Software Foundation.
+# 
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranties of MERCHANTABILITY,
+# SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License along with
+# this program.  If not, see <http://www.gnu.org/licenses/>.
+
 # disable all services
 for svc in $(snapctl services |awk '/enabled/{print$1}'); do
     snapctl stop --disable $svc
