--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -3,3 +3,5 @@ set -uex
 conf="${SNAP_DATA}/conf"
 mkdir -p -m 0755 "${conf}"
 cp "${SNAP}/share/metadata.yaml" "${conf}"
+
+# add a symlink to etc/ceph
