--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -4,4 +4,5 @@ conf="${SNAP_DATA}/conf"
 mkdir -p -m 0755 "${conf}"
 cp "${SNAP}/share/metadata.yaml" "${conf}"
 
-# add a symlink to etc/ceph
+# TODO: add a symlink to etc/ceph
+ln -s $conf /etc/ceph
